<resources>
    <string name="app_name">Diario Lab</string>

    <string-array name="tipos">
        <item>Número</item>
        <item>Texto</item>
        <item>Fecha</item>
        <item>Tipo</item>
    </string-array>

    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
        <item>Alemán</item>
        <item>Esperanto</item>
    </string-array>

    <string-array name="formatos">
        <item>Libro</item>
        <item>PDF</item>
        <item>Epub</item>
        <item>Otro</item>
    </string-array>

    <string name="bt_NuevoEstudio">➕</string>
    <string name="titulo">Título aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa del Estudio</string>
    <string name="imagen">Imagen</string>
    <string name="autor">Autor</string>
    <string name="alta">Alta</string>
    <string name="numero">Numero</string>
    <string name="nombre">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="bandera">🏁</string>
    <string name="formato">Formato</string>
    <string name="numOcurrencias">0</string>
    <string name="finalizado">Finalizado</string>
    <string name="notas">Notas</string>
    <string name="prestado">Prestado</string>
    <string name="hora">Hora</string>

    <string name="alta_libro">Alta libro</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="exportar_datos">Exportar datos</string>
    <string name="importar_datos">Importar Datos</string>
    <string name="cancelar">Cancelar</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="finalizados">Finalizados</string>
    <string name="por_fecha">Por fecha</string>
    <string name="por_t_tulo">Por título</string>
    <string name="por_autor">Por autor</string>
    <string name="ocultar_datos_de_prueba">Ocultar Datos de prueba</string>
    <string name="emojiItem">😀</string>
    <string name="desc_estudio">Descriapción del estudio</string>
    <string name="MasBoton">+</string>
    <string name="bt_borrar">Borrar</string>
    <string name="bt_modificar">Modificar</string>
    <string name="bt_ver">Ver</string>
    <string name="bt_revert">🔙</string>
    <string name="bt_dev">👾</string>
    <string name="bt_empty">☁</string>
    <string name="btMenos">-</string>
    <string name="cuenta">Cuenta</string>
    <string name="descripcion_del_estudio">Descripcion del estudio</string>
    <string name="Lab_Emojis">📔⚗️</string>
    <string name="estudio_diario">Diario Lab</string>
    <string name="EmojiDefault">😊️</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>
    <string name="ver">Ver</string>
    <string name="crear_estudio">Crear el nuevo estudio</string>
    <string name="titulo_del_estudio">Título del estudio</string>
    <string name="plus">➕️</string>
    <string name="dato">Dato</string>
    <string name="descripci_n">Descripción</string>
    <string name="nombre_de_tu_dato">Nombre de tu dato</string>
    <string name="guardar_el_estudio">Guardar el estudio</string>
    <string name="repeticiones">Reps 🔁️</string>
    <string name="a_adir_la_ocurrencia">Añadir la ocurrencia</string>
    <string name="fecha_de_la_ocurrencia">Fecha</string>
    <string name="editarEmoji">🖍</string>
    <string name="modificar">Modificar</string>
    <string name="confirmar">Confirmar</string>
    <string name="medida">Medida</string>
    <string name="tipo">Tipo</string>
    <string name="numero_columna_grafico">31/12/2025</string>
    <string name="botonCheck">✔</string>
    <string name="estudio_vac_o_na_ade_datos_en_la_pantalla_principal">
        Estudio vacío.
        Añade datos en la pantalla principal.
    </string>
    <string name="_0">0%</string>
    <string name="datos">Datos</string>
    <string name="tvCalculo">(0/0)</string>
</resources>