<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvEmoji"
            android:layout_width="46dp"
            android:layout_height="43dp"
            android:contentDescription="@string/imagen"
            android:includeFontPadding="false"
            android:padding="0dp"
            android:text="@string/EmojiDefault"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvEstudio2"
            style="@style/TextColor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@string/titulo"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvCheck"
            app:layout_constraintStart_toEndOf="@id/tvEmoji"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescripcion"
            style="@style/TextColor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:text="@string/desc_estudio"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/tvEstudio2"
            app:layout_constraintTop_toBottomOf="@+id/tvEstudio2" />


        <TextView
            android:id="@+id/tvCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:padding="0dp"
            android:text="@string/botonCheck"
            android:textSize="20sp"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvEmoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>