<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvRepeticiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:text="@string/repeticiones">

    </TextView>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/fecha_de_la_ocurrencia"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/tvRepeticiones"
        app:layout_constraintTop_toTopOf="@id/tvRepeticiones"></TextView>

    <Button
        android:id="@+id/btEditar"
        style="@style/IconColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/editarEmoji"
        android:textSize="30sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tvFecha"
        app:layout_constraintTop_toTopOf="@+id/tvRepeticiones" />

</androidx.constraintlayout.widget.ConstraintLayout>